--- a/Front/src/compenents/Score.css
+++ b/Front/src/compenents/Score.css
@@ -1,16 +1,16 @@
 @font-face {
 	font-family: south_park_font;
-	src: url(../../fonts/south\ park.ttf)
+	src: url(../fonts/south\ park.ttf)
 }
 
-#body {
+body {
 	padding: 0;
 	margin: 0;
 
 	height: 100%;
 	width: 100%;
 
-	background: url("../../img/south_park_town.jpg");
+	background: url("../img/south_park_town.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
