--- a/Front/src/compenents/Connexion.css
+++ b/Front/src/compenents/Connexion.css
@@ -16,7 +16,7 @@
 	}
   } */
 
-  #menu {
+  #body {
 	display: flex;
 	align-items: center;
 	height: 100%;
@@ -35,33 +35,4 @@
 	z-index: 1;
 
 	transition: opacity 800ms ease, background-size 800ms ease;
-  }
-
-  #menu-items {
-	margin-right: 7%;
-	position: absolute;
-	right: 30px;
-	z-index: 2;
-  }
-
-  #menu-items:hover > .menu-item {
-	opacity: 0.5;
-  }
-
-  #menu-items:hover > .menu-item:hover {
-	opacity: 1;
-	background-color: goldenrod;
-  }
-
-  .menu-item {
-	color: black;
-	font-size: clamp(3rem, 8vw, 7rem);
-	font-family: south_park_font;
-	text-align: right;
-
-	display: block;
-	text-decoration: none;
-	padding: clamp(0.25rem, 0.5vw, 1rem) 0rem;
-
-	transition: opacity 400ms ease;
   }
