--- a/Front/src/compenents/Credits/Credits.css
+++ b/Front/src/compenents/Credits/Credits.css
@@ -29,69 +29,85 @@ body {
 }
 
 #boutons {
-    width: 80vw;
-    height: 80vh;
-    margin: 30px auto;
-    position: relative;
+    position: absolute;
+    margin-top: 100px;
+    top: 0%;
+    left:0%;
+    height: 15vh;
+    width:100%;
     z-index: 2;
 }
 
-.round-button1 {
-    width: 200px;
-    height: 200px;
+.Container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: black;
+    width: fit-content;
+    height: 100%;
+    animation: marquee 10s linear infinite;
+    font-size: 500%;
+    font-family: south_park_font;
+}
+
+.round {
+    height: 120%;
+    aspect-ratio: 1/1;
     outline: none;
-    background-image: url('../../img/tuong_lu_kim.png');
     background-size: cover;
     background-position: center;
     border-radius: 50%;
-    border: solid 5px #fff;
+    border: solid 10px magenta;
+    position: relative;
     cursor: pointer;
+    background-image: linear-gradient(
+        to bottom, rgb(9, 112, 26) 0%,
+        rgb(21, 255, 0) 100%);
+}
+
+p {
+    margin-left: 50px;;
+}
+
+#creator{
+    display: inline-flex;
+    align-items: center;
+    width: 100vw;
+    justify-content: center;
+    height: 100%;
+    gap: 10px;
+}
+
+.round-button1 {
+    background-image: url('../../img/tuong_lu_kim.png');
 }
 
 .round-button2 {
-    width: 200px;
-    height: 200px;
-    border: solid 5px #fff;
-    outline: none;
     background-image: url('../../img/butters_emo.jpg');
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    cursor: pointer;
 }
 
 .round-button3 {
-    width: 200px;
-    height: 200px;
-    border: solid 5px #fff;
-    outline: none;
     background-image: url('../../img/father_maxi.png');
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    cursor: pointer;
 }
 
 .round-button4 {
-    width: 200px;
-    height: 200px;
-    border: solid 5px #fff;
-    outline: none;
     background-image: url('../../img/pascal_la_dalle.png');
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    cursor: pointer;
 }
 
 .round-button5 {
-    width: 200px;
-    height: 200px;
-    border: solid 5px #fff;
-    outline: none;
     background-image: url('../../img/joozians.jpg');
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
-    cursor: pointer;
+}
+
+@keyframes marquee {
+    0% {transform: translateX(20%);}
+    100%{transform: translateX(-100%);}
+}
+
+@media (min-width:1080px){
+
+    .Container{
+
+        animation: marquee 25s linear infinite;
+    }
+
 }
