--- a/Front/src/compenents/utils/WarningBox/WarningBox.css
+++ b/Front/src/compenents/utils/WarningBox/WarningBox.css
@@ -1,12 +1,79 @@
-.warning-box {
+@font-face {
+    font-family: south_park_font;
+    src: url(../../../fonts/south\ park.ttf)
+  }
 
+.warning-box {
 	position: fixed;
-	bottom: 10px;
-	right: 10px;
+	top: 5%;
+	left: 10%;
+	right: 10%;
+	bottom: 5%;
 	padding: 10px;
+
 	background-color: #ffc107;
 	border-radius: 5px;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-	font-size: 14px;
+
 	z-index: 15;
 }
+
+#attention {
+	font-size: 100px;
+	margin-top: 30px;
+	margin-bottom: 75px;
+	font-family: south_park_font;
+	text-align: center;
+	position: relative;
+}
+
+#rock {
+	max-width: 100%;
+	height: auto;
+	max-height: 600px;
+	display: block;
+	margin: 0 auto;
+}
+
+#message {
+	font-size: 35px;
+	font-family: south_park_font;
+	margin-left: 35px;
+	margin-right: 35px;
+	margin-top: 50px;
+	line-height: 50px;
+	position: relative;
+}
+
+#move_on {
+	background-image: url("../../../img/buttons/move_on.png");
+	background-size: cover;
+	width: 150px;
+	height: 150px;
+	font-size: 2rem;
+	position: fixed;
+	bottom: 6%;
+	right: 15%;
+
+    background-color: rgba(0, 0, 255, 0);
+    border: 1px solid rgba(0, 0, 255, 0);
+}
+
+#move_on:hover {
+	transform: rotate(-15deg);
+	transition: all 0.25s ease-in-out;
+}
+
+@media (max-width: 1000px) {
+	#move_on {
+		width: 80px;
+		height: 80px;
+	}
+}
+
+@media (max-width: 800px) {
+	#attention {
+		font-size: 50px;
+	}
+}
+
