--- a/Front/src/compenents/Credits/Credits.css
+++ b/Front/src/compenents/Credits/Credits.css
@@ -6,6 +6,7 @@
 body {
 	padding: 0;
 	margin: 0;
+    overflow: hidden;
 }
 
 #page_credits {
@@ -96,6 +97,15 @@ p {
 
 .round-button5 {
     background-image: url('../../img/joozians.jpg');
+}
+
+#return {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    right: 0;
+    font-size: 500%;
+    z-index: 2;
 }
 
 @keyframes marquee {
