--- a/Front/src/compenents/Menu/Menu.css
+++ b/Front/src/compenents/Menu/Menu.css
@@ -64,3 +64,23 @@
 
     transition: opacity 400ms ease;
   }
+
+  #msn {
+    background-image: url("../../img/buttons/msn_buttom.png");
+    background-size: cover;
+    width: 75px;
+    height: 75px;
+    font-size: 2rem;
+    position: fixed;
+    bottom: 3%;
+    right: 3%;
+    z-index: 50;
+
+      background-color: rgba(0, 0, 255, 0);
+      border: 1px solid rgba(0, 0, 255, 0);
+  }
+
+  /* #msn:hover {
+    transform: rotate(-15deg);
+    transition: all 0.25s ease-in-out;
+  } */
