--- a/Front/src/compenents/Connexion/Connexion.css
+++ b/Front/src/compenents/Connexion/Connexion.css
@@ -70,12 +70,22 @@ body {
 	height: 100vh;
 	display: flex;
 	align-items: center;
+  background-color: black;
 }
 
 .dislaimer_img {
-  display: block;
-  width: 100vw;
-  height: 100vh;
   object-fit: cover;
+  z-index: 3;
+  width: 100%;
+  height: auto;
+}
+
+#clignote {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  bottom: 28.3%;
+  right: 14.9%;
   z-index: 999;
+  background-color: white;
 }
