--- a/Front/src/compenents/Connexion/Connexion.css
+++ b/Front/src/compenents/Connexion/Connexion.css
@@ -1,4 +1,3 @@
-
 @font-face {
 	font-family: south_park_font;
 	src: url(../../fonts/south\ park.ttf)
@@ -84,8 +83,8 @@ body {
   position: absolute;
   width: 20px;
   height: 20px;
-  bottom: 28.3%;
-  right: 14.9%;
+  bottom: 28.3vh;
+  right: 14.9vw;
   z-index: 999;
   background-color: white;
 }
