--- a/Front/src/compenents/Menu/Menu.css
+++ b/Front/src/compenents/Menu/Menu.css
@@ -72,8 +72,8 @@
     height: 75px;
     font-size: 2rem;
     position: fixed;
-    bottom: 3%;
-    right: 3%;
+    bottom: 3vh;
+    right: 3vw;
     z-index: 50;
 
     background-color: rgba(0, 0, 255, 0);
@@ -81,18 +81,49 @@
   }
 
   .thanks {
-    background-image: url("../../img/buttons/lets_dance.png");
+    background-image: url("../../img/buttons/chef.gif");
     background-size: cover;
-    width: 75px;
-    height: 75px;
+    width: 336px;
+    height: 336px;
     font-size: 2rem;
     position: fixed;
-    bottom: 3%;
-    right: 15%;
+    bottom: 0vh;
+    left: 5vw;
     z-index: 50;
 
     background-color: rgba(0, 0, 255, 0);
     border: 1px solid rgba(0, 0, 255, 0);
   }
 
+  @media (max-width: 850px) {
+    .msn {
+      width: 50px;
+      height: 50px;
+    }
+    .thanks {
+      width: 150px;
+      height: 150px;
+    }
+  }
 
+.shakeme {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 0.5s;
+
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
+}
+
+    @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
