--- a/Front/src/compenents/Thanks/Thanks.css
+++ b/Front/src/compenents/Thanks/Thanks.css
@@ -3,7 +3,12 @@
     src: url(../../fonts/south\ park.ttf)
 }
 
+html {
+	height: 100%;
+}
+
 body {
+	height: 100%;
 	padding: 0;
 	margin: 0;
     overflow: hidden;
@@ -11,20 +16,27 @@ body {
 }
 
 .credits {
+	width:100vw;
+	height:100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+	line-height: 75px;
 }
 
 .white_title {
 	font-family: south_park_font;
-	font-size: 50%;
+	font-size: 450%;
 	color: white;
+	text-align: center;
 }
 
 .purple_author {
 	font-family: south_park_font;
+	font-size: 500%;
 	color: mediumslateblue;
+	text-align: center;
 }
 
 
