--- a/Front/src/compenents/Credits/Credits.css
+++ b/Front/src/compenents/Credits/Credits.css
@@ -13,6 +13,7 @@ body {
 	height: 100vh;
 	display: flex;
 	align-items: center;
+    background-color: white;
 }
 
 #bg {
@@ -68,7 +69,7 @@ body {
 a {
     margin-left: 50px;
     text-decoration : none;
-    color: white;
+    color: black;
 }
 
 #creator{
