--- a/Front/src/compenents/Menu/Menu.css
+++ b/Front/src/compenents/Menu/Menu.css
@@ -9,16 +9,17 @@
   }
 
       /* A CORRIGER POUR LE RESPONSIVE */
-  /* @media only screen and (max-width: 768px) {
-    body {
-      background-size: contain;
-    }
-  } */
+      /* @media only screen and (max-width: 768px) {
+        body {
+          background-size: contain;
+        }
+      } */
 
   #menu {
-	  height: 100vh;
-	  display: flex;
-	  align-items: center;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    background-color: white;
   }
 
   #bg-menu {
@@ -33,7 +34,7 @@
     top: 0;
     z-index: 1;
 
-    transition: opacity 800ms ease, background-size 800ms ease;
+    transition: opacity 800ms ease, background-size 800ms ease, transform 0.5s ease;
   }
 
   #menu-items {
@@ -121,24 +122,21 @@
     }
   }
 
-.shakeme {
-    /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 0.5s;
+  .zoom-transition-bottom {
+    animation: zoom 0.5s forwards;
+    transform-origin: bottom;
+    opacity: 0.2;
+  }
 
-    /* When the animation is finished, start again */
-    animation-iteration-count: infinite;
-}
+  .zoom-transition {
+    animation: zoom 6s forwards;
+  }
 
-    @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
+  @keyframes zoom {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(2);
+    }
+  }
