--- a/Front/src/compenents/Game/Game.css
+++ b/Front/src/compenents/Game/Game.css
@@ -6,11 +6,23 @@
 body {
     padding: 0;
     margin: 0;
-    background: url("../../img/south_park_town.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+}
+
+.bg {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    background-color:#89cede;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0;
+}
+
+.opacity {
+    opacity: 0.7;
 }
 
 #game {
@@ -22,4 +34,14 @@ body {
     border: solid 4px #696969;
     background-color: black;
     color: white;
+    z-index: 1;
+}
+
+#return {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    right: 0;
+    font-size: 500%;
+    z-index: 2;
 }
