--- a/Front/src/compenents/utils/Range/Range.css
+++ b/Front/src/compenents/utils/Range/Range.css
@@ -1,27 +1,32 @@
-#range {
+.range {
+	position: relative;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	margin-top: 10%;
+	/* margin-top: 1vh; */
 }
 
 #emoji {
-	display: flex;
+	/* display: flex;
 	align-items: center;
-	justify-content: center;
-	margin-top: 10%;
+	justify-content: center; */
 }
 
 #age {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: 10%;
+	/* margin-top: 10%; */
 }
+
 .less {
+	margin-top: 1vh;
 	accent-color: green;
 }
 
 .heigh {
+	margin-top: 1vh;
 	accent-color: rgb(149, 35, 170);
 }
+
