--- a/Front/src/compenents/utils/Form/Form.css
+++ b/Front/src/compenents/utils/Form/Form.css
@@ -3,7 +3,7 @@
 	src: url(../../../fonts/south\ park.ttf)
 }
 
-form {
+/* form {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -18,50 +18,59 @@ form {
 	font-family: south_park_font;
 	transition: all 0.5s ease;
 	pointer-events: none;
-  }
-
+  } */
 
   #barre[type=text]:focus~.hello {
-	  display: block;
+	  /* display: block; */
 	  color: black;
-	  margin-top: -85px;
+	  /* margin-top: -85px;
 	  margin-left: -3%;
-	  font-size: 16px;
+	  font-size: 16px; */
 	}
 
-  #barre[type=text]:focus~.enter {
+	#barre[type=text]:focus~.hello::after{
+	visibility: hidden;
+}
+
+  /* #barre[type=text]:focus~.enter {
 	background-color: rgb(71, 37, 5);
 	position: absolute;
-	content: ' ';
+	 content: ' '; 
 	height: 1px;
-	right: 45%;
-	margin-top: 52px;
-	transform: scaleX(5)
-  }
+	right: 45%; 
+	margin-top: 52px; 
+	transform: scaleX(5);
+  } */
 
-  .enter{
+  /* .enter{
 	transition: all ease 0.5s;
 	width: 9.9%;
 	transform: scaleX(1)
 
+  } */
+
+  #barre[type="text"]
+  {
+	font-size: 30px;
+	font-family: Arial;
   }
 
-  textarea, #barre {
-	position: absolute;
+ textarea, #barre {
+	/* position: absolute; */
 	outline: none;
 	border: 0;
 	border-bottom: 1px solid #cecece;
 	height: 50px;
-	width: 50%;
-	font-family: south_park_font;
+	width: 50%; 
+	/* font-family: south_park_font; */
 	/* max-width: 500px; */
   }
 
-  #barre:focus{
+  /* #barre:focus{
 	content: 'prout';
 	font-family: south_park_font;
 	font-size: 200%;
-  }
+  } */
 
   button {
 	z-index: 999999;
