--- a/Front/src/compenents/Chat/Chat.css
+++ b/Front/src/compenents/Chat/Chat.css
@@ -2,16 +2,28 @@ Body {
     background: #2c2b5c;
 }
 
+/* Chat containers */
 .chat-container {
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
     width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid purple;
-    display: flex;
-    margin-top: 30vh;
-    flex-direction: column;
-}
+  }
+  
+  /* Darker chat container */
+  .darker {
+    border-color: #ccc;
+    background-color: #ddd;
+  }
+  
+  /* Clear floats */
+  .chat-container::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
 .chat-room-container    {
     width: 100%;
@@ -21,15 +33,23 @@ Body {
     justify-content: center;
 }
 
-.wrapper-message-send   {
+
+.wrapper-message-send input {
     width: 100%;
-    height: 100%;
-    border: 1px solid yellow;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 2vh;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.wrapper-message-send button {
+    padding: 5px 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.wrapper-message-send button:hover {
+    background-color: #45a049;
 }
 
 .wrapper-message-received   {
