--- a/Front/src/compenents/Menu/Menu.css
+++ b/Front/src/compenents/Menu/Menu.css
@@ -67,7 +67,7 @@
   }
 
   .msn {
-    background-image: url("../../img/buttons/msn_buttom.png");
+    background-image: url("../../img/icons/msn.png");
     background-size: cover;
     width: 75px;
     height: 75px;
