--- a/Front/src/compenents/Game/GameMenu/GameMenu.css
+++ b/Front/src/compenents/Game/GameMenu/GameMenu.css
@@ -4,6 +4,8 @@
 	height: 100vh;
 	object-fit: cover;
 	position: absolute;
+    background-color:#89cede;
+    opacity: 0.9;
 	left: 0;
 	top: 0;
 }
@@ -21,22 +23,102 @@
 	text-align: center;
 }
 
-#play-button {
-	right: 8vw;
-	top: 10vh;
-	width: 62vw;
-	height: 20vh;
-	opacity: 75%;
-	position: absolute;
-}
-
 #history {
 	right: 8vw;
-	bottom: 10vh;
+	top: 10vh;
 	width: 62vw;
 	height: 50vh;
 	background-color: red;
 	opacity: 75%;
 	position: absolute;
 	text-align: center;
+}
+
+/********* PLAY BUTTON ***********/
+
+.play-button {
+	position: absolute;
+    padding: 15px 45px;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    color: white;
+    background: brown;
+    transition: 1s;
+    box-shadow: 6px 6px 0 black;
+    transform: skewX(-15deg);
+	z-index: 99999999;
+	bottom: 5vh;
+	right: 5vw;
+	font-family: south_park_font;
+}
+
+.play-button:focus {
+   outline: none;
+}
+
+.play-button:hover {
+    transition: 0.5s;
+    box-shadow: 10px 10px 0 #FBC638;
+}
+
+.play-button span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 0px;
+}
+
+.play-button:hover  span:nth-child(2) {
+    transition: 0.5s;
+    margin-right: 45px;
+}
+
+  span {
+    transform: skewX(15deg)
+  }
+
+  span:nth-child(2) {
+    width: 20px;
+    margin-left: 30px;
+    position: relative;
+    top: 12%;
+  }
+
+/**************SVG****************/
+
+path.one {
+    transition: 0.4s;
+    transform: translateX(-60%);
+}
+
+path.two {
+    transition: 0.5s;
+    transform: translateX(-30%);
+}
+
+.play-button:hover path.three {
+    animation: color_anim 1s infinite 0.2s;
+}
+
+.play-button:hover path.one {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.6s;
+}
+
+.play-button:hover path.two {
+    transform: translateX(0%);
+    animation: color_anim 1s infinite 0.4s;
+}
+
+/* SVG animations */
+
+@keyframes color_anim {
+    0% {
+        fill: white;
+    }
+    50% {
+        fill: #FBC638;
+    }
+    100% {
+        fill: white;
+    }
 }
