--- a/Front/src/compenents/Game/GameMenu/GameMenu.css
+++ b/Front/src/compenents/Game/GameMenu/GameMenu.css
@@ -72,11 +72,11 @@
     margin-right: 45px;
 }
 
-  span {
+  #span_menu {
     transform: skewX(15deg)
   }
 
-  span:nth-child(2) {
+  #span_menu:nth-child(2) {
     width: 20px;
     margin-left: 30px;
     position: relative;
