--- a/Front/src/compenents/Game/GameMenu/GameMenu.css
+++ b/Front/src/compenents/Game/GameMenu/GameMenu.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: black_live_matters;
+    src: url(../../../fonts/Black\ Lives\ Matter.otf)
+}
+
 #bg-game {
 	display: block;
 	width: 100vw;
@@ -10,28 +15,187 @@
 	top: 0;
 }
 
+/********* SPECTATE ***********/
+
 #spec-menu {
-	left: 4vw;
-	top: 10vh;
-	width: 22vw;
-	height: 80vh;
-	border-radius: 20px;
-	border: 2px solid #3F3F3F;
+	right: 8vw;
+	top: 48vh;
+	width: 53vw;
+	height: 35vh;
+	display: grid;
 	position: absolute;
-	opacity: 75%;
-	background-color: #6F6F6F;
-	text-align: center;
+    place-items: center;
 }
 
-#history {
+.cercle {
+    position: absolute;
+    background:red;
+    border-radius: 50%;
+    width:15px;
+    height:15px;
+    top: 4.5vh;
+    right: 6.5vw;
+}
+
+.visible {
+    opacity: 1;
+}
+  
+.hidden {
+    opacity: 0;
+}
+
+#live {
+    position: fixed;
+    color: red;
+    top: 52%;
+    right: 13%;
+    font-family: black_live_matters;
+    font-size: 150%;
+}
+
+#spectate-bg {
+    display: grid;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+    grid-template-columns: max-content auto;
+    grid-template-rows: auto max-content;
+    background: rgba(250, 250, 250, 0.5) url('../../../img/chinese_dodgeball.jpg') center;
+    background-size: cover;
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 2rem; 
+}
+
+#spectate-bg:before, #spectate-bg:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 2px solid white;
+  }
+  
+  #spectate-bg:before {
+    grid-row: 1 / 2;
+    border-right: none;
+    border-bottom: none;
+  }
+  
+  #spectate-bg:after {
+    grid-row: 1 / span 2;
+    border-left: none;
+  }
+
+#spectate-font {
+    margin: 1rem 1rem -0.5rem 0;
+    font-family: south_park_font;
+    font-size: 2rem;
+    max-width: 100%; 
+    line-height: 1em;
+}
+
+/********* HISTORIQUE ***********/
+
+#history-menu {
 	right: 8vw;
 	top: 10vh;
-	width: 62vw;
-	height: 50vh;
-	background-color: red;
-	opacity: 75%;
+	width: 53vw;
+	height: 35vh;
+	display: grid;
 	position: absolute;
-	text-align: center;
+    place-items: center;
+}
+
+#history-bg {
+    display: grid;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+    grid-template-columns: max-content auto;
+    grid-template-rows: auto max-content;
+    background: #333 url('../../../img/fight_wing.jpg') center;
+    background-size: cover;
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 2rem; 
+}
+
+#history-bg:before, #history-bg:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 2px solid white;
+  }
+  
+  #history-bg:before {
+    grid-row: 1 / 2;
+    border-right: none;
+    border-bottom: none;
+  }
+  
+  #history-bg:after {
+    grid-row: 1 / span 2;
+    border-left: none;
+  }
+
+#history-font {
+    margin: 1rem 1rem -0.5rem 0;
+    font-family: south_park_font;
+    font-size: 2rem;
+    max-width: 100%; 
+    line-height: 1em;
+}
+
+/********* CLASSEMENT  ***********/
+
+#classement-menu {
+	left: 4vw;
+	top: 10vh;
+	width: 33vw;
+	height: 80vh;
+	display: grid;
+	position: absolute;
+    place-items: center;
+}
+
+#classement-bg {
+    display: grid;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.4);
+    grid-template-columns: max-content auto;
+    grid-template-rows: auto max-content;
+    background: #333 url('../../../img/ActualBoysPenisSizes.jpg') center;
+    background-size: cover;
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 2rem; 
+}
+
+#classement-bg:before, #classement-bg:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 2px solid white;
+  }
+  
+  #classement-bg:before {
+    grid-row: 1 / 2;
+    border-right: none;
+    border-bottom: none;
+  }
+  
+  #classement-bg:after {
+    grid-row: 1 / span 2;
+    border-left: none;
+  }
+
+#classement-font {
+    margin: 1rem 1rem -0.5rem 0;
+    font-family: south_park_font;
+    font-size: 2rem;
+    max-width: 100%; 
+    line-height: 1em;
 }
 
 /********* PLAY BUTTON ***********/
