--- a/Front/src/compenents/Game/Win/Win.css
+++ b/Front/src/compenents/Game/Win/Win.css
@@ -11,7 +11,308 @@
 	width: 100vw;
 	height: 100vh;
 	position: absolute;
-	background-color: pink;
+  background: linear-gradient(-45deg, rgb(30, 148, 30), yellow, rgb(207, 64, 212), #23a6d5);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.stars {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: rotateZ(45deg);
+  z-index: 1;
+}
+
+.shooting_star {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 2px;
+  background: linear-gradient(-45deg, #5f91ff, rgba(0, 0, 255, 0));
+  border-radius: 999px;
+  filter: drop-shadow(0 0 6px #699bff);
+  animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+}
+
+.shooting_star::before {
+  content: '';
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
+  transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  animation: shining 3000ms ease-in-out infinite;
+}
+
+.shooting_star::after {
+  content: '';
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
+  transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  animation: shining 3000ms ease-in-out infinite;
+  transform: translateX(50%) rotateZ(-45deg);
+}
+
+.shooting_star:nth-child(1) {
+  top: calc(50% - -133px);
+  left: calc(50% - 286px);
+  animation-delay: 3451ms;
+}
+
+.shooting_star:nth-child(1)::before, .shooting_star:nth-child(1)::after {
+  animation-delay: 3451ms;
+}
+
+.shooting_star:nth-child(2) {
+  top: calc(50% - 61px);
+  left: calc(50% - 253px);
+  animation-delay: 5240ms;
+}
+
+.shooting_star:nth-child(2)::before, .shooting_star:nth-child(2)::after {
+  animation-delay: 5240ms;
+}
+
+.shooting_star:nth-child(3) {
+  top: calc(50% - 83px);
+  left: calc(50% - 154px);
+  animation-delay: 6289ms;
+}
+
+.shooting_star:nth-child(3)::before, .shooting_star:nth-child(3)::after {
+  animation-delay: 6289ms;
+}
+
+.shooting_star:nth-child(4) {
+  top: calc(50% - 128px);
+  left: calc(50% - 55px);
+  animation-delay: 1220ms;
+}
+
+.shooting_star:nth-child(4)::before, .shooting_star:nth-child(4)::after {
+  animation-delay: 1220ms;
+}
+
+.shooting_star:nth-child(5) {
+  top: calc(50% - -187px);
+  left: calc(50% - 67px);
+  animation-delay: 4044ms;
+}
+
+.shooting_star:nth-child(5)::before, .shooting_star:nth-child(5)::after {
+  animation-delay: 4044ms;
+}
+
+.shooting_star:nth-child(6) {
+  top: calc(50% - 140px);
+  left: calc(50% - 168px);
+  animation-delay: 5696ms;
+}
+
+.shooting_star:nth-child(6)::before, .shooting_star:nth-child(6)::after {
+  animation-delay: 5696ms;
+}
+
+.shooting_star:nth-child(7) {
+  top: calc(50% - 82px);
+  left: calc(50% - 158px);
+  animation-delay: 4191ms;
+}
+
+.shooting_star:nth-child(7)::before, .shooting_star:nth-child(7)::after {
+  animation-delay: 4191ms;
+}
+
+.shooting_star:nth-child(8) {
+  top: calc(50% - -27px);
+  left: calc(50% - 152px);
+  animation-delay: 5915ms;
+}
+
+.shooting_star:nth-child(8)::before, .shooting_star:nth-child(8)::after {
+  animation-delay: 5915ms;
+}
+
+.shooting_star:nth-child(9) {
+  top: calc(50% - 55px);
+  left: calc(50% - 134px);
+  animation-delay: 5372ms;
+}
+
+.shooting_star:nth-child(9)::before, .shooting_star:nth-child(9)::after {
+  animation-delay: 5372ms;
+}
+
+.shooting_star:nth-child(10) {
+  top: calc(50% - -52px);
+  left: calc(50% - 103px);
+  animation-delay: 6560ms;
+}
+
+.shooting_star:nth-child(10)::before, .shooting_star:nth-child(10)::after {
+  animation-delay: 6560ms;
+}
+
+.shooting_star:nth-child(11) {
+  top: calc(50% - 174px);
+  left: calc(50% - 272px);
+  animation-delay: 3348ms;
+}
+
+.shooting_star:nth-child(11)::before, .shooting_star:nth-child(11)::after {
+  animation-delay: 3348ms;
+}
+
+.shooting_star:nth-child(12) {
+  top: calc(50% - -114px);
+  left: calc(50% - 24px);
+  animation-delay: 7020ms;
+}
+
+.shooting_star:nth-child(12)::before, .shooting_star:nth-child(12)::after {
+  animation-delay: 7020ms;
+}
+
+.shooting_star:nth-child(13) {
+  top: calc(50% - -4px);
+  left: calc(50% - 27px);
+  animation-delay: 8409ms;
+}
+
+.shooting_star:nth-child(13)::before, .shooting_star:nth-child(13)::after {
+  animation-delay: 8409ms;
+}
+
+.shooting_star:nth-child(14) {
+  top: calc(50% - -130px);
+  left: calc(50% - 246px);
+  animation-delay: 1637ms;
+}
+
+.shooting_star:nth-child(14)::before, .shooting_star:nth-child(14)::after {
+  animation-delay: 1637ms;
+}
+
+.shooting_star:nth-child(15) {
+  top: calc(50% - 123px);
+  left: calc(50% - 183px);
+  animation-delay: 3686ms;
+}
+
+.shooting_star:nth-child(15)::before, .shooting_star:nth-child(15)::after {
+  animation-delay: 3686ms;
+}
+
+.shooting_star:nth-child(16) {
+  top: calc(50% - -61px);
+  left: calc(50% - 220px);
+  animation-delay: 9703ms;
+}
+
+.shooting_star:nth-child(16)::before, .shooting_star:nth-child(16)::after {
+  animation-delay: 9703ms;
+}
+
+.shooting_star:nth-child(17) {
+  top: calc(50% - 133px);
+  left: calc(50% - 22px);
+  animation-delay: 3535ms;
+}
+
+.shooting_star:nth-child(17)::before, .shooting_star:nth-child(17)::after {
+  animation-delay: 3535ms;
+}
+
+.shooting_star:nth-child(18) {
+  top: calc(50% - 0px);
+  left: calc(50% - 103px);
+  animation-delay: 6350ms;
+}
+
+.shooting_star:nth-child(18)::before, .shooting_star:nth-child(18)::after {
+  animation-delay: 6350ms;
+}
+
+.shooting_star:nth-child(19) {
+  top: calc(50% - 121px);
+  left: calc(50% - 177px);
+  animation-delay: 6621ms;
+}
+
+.shooting_star:nth-child(19)::before, .shooting_star:nth-child(19)::after {
+  animation-delay: 6621ms;
+}
+
+.shooting_star:nth-child(20) {
+  top: calc(50% - 73px);
+  left: calc(50% - 51px);
+  animation-delay: 3293ms;
+}
+
+.shooting_star:nth-child(20)::before, .shooting_star:nth-child(20)::after {
+  animation-delay: 3293ms;
+}
+
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(300px);
+  }
+}
+
+@keyframes sky {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
 }
 
 #victoire {
@@ -20,6 +321,7 @@
   animation: moveFromLeftToCenter 1s ease, colorChange 2s ease-in infinite;
   color: #F5ECCF;
   text-shadow: 0px 0px #EB4A2C, -1px 1px #EB4A2C, -2px 2px #EB4A2C, -3px 3px #EB4A2C, -4px 4px #EB4A2C, -5px 5px #EB4A2C, -6px 6px #EB4A2C, -7px 7px #EB4A2C, -8px 8px #EB4A2C, -9px 9px #EB4A2C, -10px 10px #EB4A2C, -11px 11px #EB4A2C, -12px 12px #EB4A2C, -13px 13px #EB4A2C, -14px 14px #EB4A2C, -15px 15px #EB4A2C, -16px 16px #EB4A2C, -17px 17px #EB4A2C, -18px 18px #EB4A2C, -19px 19px #EB4A2C, -20px 20px #EB4A2C, -21px 21px #EB4A2C, -22px 22px #EB4A2C, -23px 23px #EB4A2C, -24px 24px #EB4A2C, -25px 25px #EB4A2C, -26px 26px #EB4A2C, -27px 27px #EB4A2C, -28px 28px #EB4A2C, -29px 29px #EB4A2C, -30px 30px #EB4A2C, -31px 31px #EB4A2C, -32px 32px #EB4A2C, -33px 33px #EB4A2C, -34px 34px #EB4A2C, -35px 35px #EB4A2C, -36px 36px #EB4A2C, -37px 37px #EB4A2C, -38px 38px #EB4A2C, -39px 39px #EB4A2C, -40px 40px #EB4A2C, -41px 41px #EB4A2C, -42px 42px #EB4A2C, -43px 43px #EB4A2C, -44px 44px #EB4A2C, -45px 45px #EB4A2C, -46px 46px #EB4A2C, -47px 47px #EB4A2C, -48px 48px #EB4A2C, -49px 49px #EB4A2C, -50px 50px #EB4A2C;
+  z-index: 2;
 }
 
   @keyframes moveFromLeftToCenter {
@@ -76,3 +378,54 @@
 opacity: 1;
 transform: translateY(0);
 }
+
+#button-randy-win {
+	bottom: 3vh;
+	right: 3vw;
+	width: 170px;
+	height: 170px;
+	position: absolute;
+	transform: translateY(50px) translateX(100%);
+  transition: opacity 1s, transform 1s;
+	animation: moveFromRight 1s ease;
+}
+
+#bg-win.show-image #button-randy-win {
+  opacity: 1;
+  transform: translateY(0) translateX(0);
+}
+
+#garrison_again {
+	bottom: 3vh;
+	left: 3vw;
+	width: 170px;
+	height: 170px;
+	position: absolute;
+	transform: translateY(50px) translateX(-100%);
+  transition: opacity 1s, transform 1s;
+	animation: moveFromLeft 1s ease;
+}
+
+#bg-win.show-image #garrison_again {
+  opacity: 1;
+  transform: translateY(0) translateX(0);
+}
+
+@keyframes moveFromLeft {
+	from {
+		transform: translateX(-100%);
+	}
+	to {
+		transform: translateX(0);
+	}
+}
+
+@keyframes moveFromRight {
+	from {
+		transform: translateX(+100%);
+	}
+	to {
+		transform: translateX(0);
+	}
+}
+
