lil fixes about CSS

--- a/Front/src/compenents/utils/ImportAvatar/ImportAvatar.css
+++ b/Front/src/compenents/utils/ImportAvatar/ImportAvatar.css
@@ -23,7 +23,7 @@
 	object-fit: cover;
   }
 
-  .circle {
+  .circle_new_profile {
 	display: flex;
 	align-items: center;
 	justify-content: center;
