--- a/Front/src/compenents/Chat/Chat.css
+++ b/Front/src/compenents/Chat/Chat.css
@@ -63,7 +63,58 @@
 
 .bottom-conversation-list {
     height: 75%;
-    background-color: blueviolet;
+    background-color: #ebeef3;
+    margin: 1px 2px 2px 2px;
+    border-radius: 5px;
+    display: row;
+}
+
+.info-conversation-list {
+    height: 10%;
+    width: 100%;
+    /* background-color: black; */
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 80px;
+    border: solid;
+    border-color: grey;
+    /* background: linear-gradient(180deg, rgba(182,209,238,1) 0%, rgba(176,212,249,1) 3%,
+    rgba(248,248,250,1) 20%, rgba(232,238,242,1) 74%, rgba(224,234,239,1) 100%);    border-radius: 5px; */
+}
+
+.display-list-convo {
+    height: 70%;
+    width: 90%;
+    border-top-left-radius: 3%;
+    background-color: #fffeff;
+    margin-left: 10%;
+    /* margin-bottom: 1%; */
+}  
+
+.Advertisement-scope {
+    height:20%;
+    width: 90%;
+    /* margin-bottom: 1%; */
+    /* margin-right: 1%; */
+    /* border-radius: 5px; */
+    background-color: azure;
+    margin-left: 10%;
+    padding-left: 2%; 
+    padding-right: 2%;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    border-color: lightgrey;
+}
+
+.Advertisement {
+    width: 100%;
+    border-radius: 5px;
+    height: 98%;
+    border: solid;
+    border-width: 1px;
+    /* background-color: black; */
+
 }
 
 /* Chat containers */
@@ -134,8 +185,56 @@
 .right-part-chat {
     width: 50%;
     height: 100%;
-    background-color: orange;
+    /* background-color: orange; */
 	/* background-image: url("./windows-xp-wallpaper-bliss.jpg"); */
+}
+
+.individual-convo-big-container {
+    height: 50%;
+    width: 50%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+}
+
+.Navbar-individual-convo {
+    width: 100%;
+    height: 13%;
+    background-color: #45a049;
+}
+
+.receiver-big-container { 
+    height: 40%;
+    width: 100%;
+    background-color: pink;
+    display: grid;
+    grid-template-columns: repeat(50, 2%);
+	grid-template-rows: repeat(50, 2%);
+}
+
+.display-individual-convo {
+    /* width: 60%;
+    height: 100%; */
+    border-radius: 5px;
+    grid-row-start: 3;
+    grid-row-end: 48;
+    grid-column-start: 2;
+    grid-column-end: 33;
+    background-color: red;
+}
+
+.profile-pic-reveiver {
+    border-radius: 5px;
+    grid-row-start: 3;
+    grid-row-end: 35;
+    grid-column-start: 34;
+    grid-column-end: 48;
+    /* margin-left: 20%;
+    margin-right: 10%; */
+    /* width: 30%;
+    height: 60%; */
+    background-color: #2c2b5c;
 }
 
 .Footer {
